Doc. Swagger Phase 3
añadida la documentacion del Swagger a los siguientes controladores:

InventoryController, DeckController, MarketController y TransactionController
